# nn

./: CHANGELOG.md  memo.txt  nn.cabal
app/: SingleLayerPerceptron.hs
