cabal-version: 3.0
name:          nn
version:       0.1.0.0
license:       MIT
maintainer:    mtwtkman
build-type:    Simple

common warnings
  ghc-options: -Wall

executable single-layer-perceptron
  import:           warnings
  main-is:          SingleLayerPerceptron.hs
  build-depends:
    , base
    , random
    , mtl

  hs-source-dirs:   app
  default-language: Haskell2010
